--- a/gradeOfStudents.html
+++ b/gradeOfStudents.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Findind Grade from the student which we take 5 subjects marks</h2>
+<h2>Finding Grade from the student which we take 5 subjects marks</h2>
 
 <p id="sum"> </p>
 
